--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "react-x-resizeble",
+  "name": "react-x-resizable",
   "private": true,
   "version": "0.0.0",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/x-resizable.umd.js",
+  "module": "./dist/x-resizable.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/x-resizable.es.js",
+      "require": "./dist/x-resizable.umd.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:lib": "scripty",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -12,10 +24,13 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "scripty": "2.0.0",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0"
+    "vite": "^2.9.0",
+    "vite-dts": "1.0.4"
   }
 }
