--- a/demo/vite-react-ts/package.json
+++ b/demo/vite-react-ts/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "react-x-resizable": "*",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
